--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-pandas
-numpy
-matplotlib
-seaborn
-plotly
-openpyxl
-xlrd
+requests==2.32.4
+pandas==2.3.1
+numpy==2.3.1
+matplotlib==3.10.3
+seaborn==0.13.2
+urllib3==2.5.0
+plotly==6.3.0
+openpyxl==3.1.5
+xlrd==2.0.2
+scikit-learn==1.7.2
+factor_analyzer==0.5.1
+soundfile==0.13.1
+torch==2.8.0
+kokoro==0.9.4nome_do_ambiente\Scripts\activate
