--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ scikit-learn==1.7.2
 factor_analyzer==0.5.1
 soundfile==0.13.1
 torch==2.8.0
-kokoro==0.9.4nome_do_ambiente\Scripts\activate
+kokoro==0.9.4
